src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__prime_sieve.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

fn is_prime(n) {
  if n < 2 {
    return false
  }

  let i = 2
  loop {
    if i * i > n {
      break
    }

    if n / i * i == n {
      return false
    }

    i = i + 1
  }

  return true
}

OK
Root(
    [
        FuncDecl(
            Ident(
                "is_prime",
            ),
            Block(
                [
                    StmtExpr(
                        IfSimple(
                            Infix(
                                Lt,
                                GetVar(
                                    Ident(
                                        "n",
                                    ),
                                ),
                                Int32(
                                    2,
                                ),
                            ),
                            None,
                            [
                                StmtExpr(
                                    Return(
                                        Some(
                                            Bool(
                                                false,
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                    Var(
                        Ident(
                            "i",
                        ),
                        Int32(
                            2,
                        ),
                    ),
                    Loop(
                        [
                            StmtExpr(
                                IfSimple(
                                    Infix(
                                        Gt,
                                        Infix(
                                            Mul,
                                            GetVar(
                                                Ident(
                                                    "i",
                                                ),
                                            ),
                                            GetVar(
                                                Ident(
                                                    "i",
                                                ),
                                            ),
                                        ),
                                        GetVar(
                                            Ident(
                                                "n",
                                            ),
                                        ),
                                    ),
                                    None,
                                    [
                                        StmtExpr(
                                            Break,
                                        ),
                                    ],
                                ),
                            ),
                            StmtExpr(
                                IfSimple(
                                    Infix(
                                        Eq,
                                        Infix(
                                            Mul,
                                            Infix(
                                                Div,
                                                GetVar(
                                                    Ident(
                                                        "n",
                                                    ),
                                                ),
                                                GetVar(
                                                    Ident(
                                                        "i",
                                                    ),
                                                ),
                                            ),
                                            GetVar(
                                                Ident(
                                                    "i",
                                                ),
                                            ),
                                        ),
                                        GetVar(
                                            Ident(
                                                "n",
                                            ),
                                        ),
                                    ),
                                    None,
                                    [
                                        StmtExpr(
                                            Return(
                                                Some(
                                                    Bool(
                                                        false,
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                            ),
                            StmtExpr(
                                SetVar(
                                    None,
                                    GetVar(
                                        Ident(
                                            "i",
                                        ),
                                    ),
                                    Infix(
                                        Add,
                                        GetVar(
                                            Ident(
                                                "i",
                                            ),
                                        ),
                                        Int32(
                                            1,
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    ),
                    StmtExpr(
                        Return(
                            Some(
                                Bool(
                                    true,
                                ),
                            ),
                        ),
                    ),
                ],
            ),
            [
                Ident(
                    "n",
                ),
            ],
        ),
    ],
)
