src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__return_fn_bad.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

return fn(){}


ERROR
ambiguous
3 |  return fn(){}
  |         ^^
  |
  > help: disambiguate with `return (fn ...)` or `return nil fn ...`
