src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__return_fn_good.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

return (fn(){})


OK
Root(
    [
        StmtExpr(
            Return(
                Some(
                    FuncAnon(
                        None,
                        Block(
                            [],
                        ),
                        [],
                    ),
                ),
            ),
        ),
    ],
)
