src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__return_nil_fn_good.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

return nil
fn f(){}


OK
Root(
    [
        StmtExpr(
            Return(
                Some(
                    Nil,
                ),
            ),
        ),
        FuncDecl(
            Ident(
                "f",
            ),
            Block(
                [],
            ),
            [],
        ),
    ],
)
