src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__string.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
##parse

let simple = "test"

let laughing_face = "\u{1F602}"

let newline = "\x0A"

let newline_tab = "\n\t"

let escaped_quote = "\""


OK
Root(
    [
        Var(
            Ident(
                "simple",
            ),
            Str(
                "test",
            ),
        ),
        Var(
            Ident(
                "laughing_face",
            ),
            Str(
                "😂",
            ),
        ),
        Var(
            Ident(
                "newline",
            ),
            Str(
                "\n",
            ),
        ),
        Var(
            Ident(
                "newline_tab",
            ),
            Str(
                "\n\t",
            ),
        ),
        Var(
            Ident(
                "escaped_quote",
            ),
            Str(
                "\"",
            ),
        ),
    ],
)
