src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__table.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
##parse

let empty = {}

let single_arg = {a:b}
let single_arg_tc = {a:b,}

let multi_arg = {a:0, b:1}
let multi_arg_tc = {a:0, b:1,}

let single_arg_inline = {a}
let single_arg_inline_tc = {a,}

let multi_arg_mixed = {a:0, b}
let multi_arg_mixed_tc = {a:0, b,}

let multi_arg_mixed2 = {a, b:0}
let multi_arg_mixed2_tc = {a, b:0,}

let string_key = {"a":0}
let string_key_tc = {"a":0,}

let string_key_multi = {"a":0, "b":1}
let string_key_multi_tc = {"a":0, "b":1,}



OK
Root(
    [
        Var(
            Ident(
                "empty",
            ),
            Table(
                [],
            ),
        ),
        Var(
            Ident(
                "single_arg",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "single_arg_tc",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg_tc",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "single_arg_inline",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "single_arg_inline_tc",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg_mixed",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg_mixed_tc",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg_mixed2",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg_mixed2_tc",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "string_key",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "string_key_tc",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "string_key_multi",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "string_key_multi_tc",
            ),
            Table(
                [
                    TableEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    TableEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
    ],
)
