src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__variable.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
##parse

let x = 0
let y = 1


OK
Root(
    [
        Var(
            Ident(
                "x",
            ),
            Int32(
                0,
            ),
        ),
        Var(
            Ident(
                "y",
            ),
            Int32(
                1,
            ),
        ),
    ],
)
